<!--
 Copyright 2020 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="app_name">Map With Marker</string>
    <string name="title_activity_maps">Map with Marker</string>
    <string name="trip_planner_title">Steps</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go to Login</string>
    <string name="login">Login</string>
    <string name="plus_button">+</string>
    <string name="sign_out">Sign Out</string>
    <string name="admin">Admin</string>
    <string name="go_to_settings">Settings</string>
    <string name="projects">Projects</string>
    <string name="sky_blue">#87CEEB</string>
    <string name="forest_green">#228B22</string>
    <string name="desert_sand">#EDC9AF</string>
    <string name="welcome_to_paris">WELCOME TO PARIS</string>
</resources>
